# online-offline-sigs

./: .gitignore  .gitmodules  .np.txt.swo  Makefile  README.md  main.cpp  main_host.cpp  main_profile.cpp  np.txt  plugged.txt
falcon-c/: Makefile  falcon.c  falcon.h  sign.c  speed  speed.c  test_falcon  test_falcon.c
falcon-lazy/: Makefile  common.c  falcon.c  falcon.h  inner.h  sign.c  speed.c  test_falcon.c  vrfy.c
falcon-lazy2/: CMakeLists.txt  codec.c  common.c  config.h  ed25519  falcon.c  falcon.h  fft.c  fpr.c  fpr.h  inner.h  keygen.c  resync.sh  rng.c  shake.c  sign.c  speed.c  test_falcon.c  vrfy.c
falcon-lazy2/tests/: bench_lazy_falcon.cpp  testlib.cpp  testlib.h  unittest.cpp
falcon-m7/benchmarking/falcon-lazy/: Makefile  main.cpp
falcon-m7/benchmarking/falcon-lazy/falcon-lazy/: inner.h  speed.c
falcon-py/: malb.py
falcontest/: pyvenv.cfg
falcontest/falcon/: malb.py
falcontest/falcontest/: pyvenv.cfg
parallelepiped/: main.cpp
